--- a/styles/style.css
+++ b/styles/style.css
@@ -106,11 +106,11 @@
   }
 
   .margin-top-small {
-    margin-top: 0.3em;
+    margin-top: 0.4em;
   }
 
   .margin-bottom {
-    margin-bottom: 0.3em;
+    margin-bottom: 0.4em;
   }
 
   span {
@@ -196,7 +196,7 @@
     fill: var(--light-blue);
   }
 
-  .hero, .pages-information {
+  .hero, .functions, .pages-information {
     padding: 4em 1em;
   }
   
@@ -274,6 +274,18 @@
   .lang {
     margin: 0;
     padding: 0;
+  }
+
+  /* FUNCTIONS */
+  .functions-easy, .functions-fast {
+    padding: 3em 3em;
+    text-align: center;
+    background-color: var(--secondary);
+    border-radius: 1em;
+  }
+
+  .functions-easy {
+    margin-bottom: 3em;
   }
 
   /* HOME */
@@ -365,6 +377,10 @@
     display: flex;
   }
 
+  .hero, .functions, .pages-information {
+    padding: 4em 5em;
+  }
+
   /* HEADER */
 
   .logo-testasssistent {
@@ -419,8 +435,25 @@
     padding-left: 0;
   }
 
-  .hero, .pages-information {
-    padding: 4em 5em;
+   /* FUNCTIONS */
+  
+   .functions {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+  }
+
+  .functions-easy {
+    margin-right: 3em;
+    grid-row: 2;
+  }
+
+  .functions-fast {
+    grid-row: 2;
+  }
+
+  .functions-easy {
+    margin-bottom: 0;
   }
 
   /* HERO */
@@ -443,7 +476,7 @@
     font-size: 1.5rem;
   }
 
-    /* PAGES INFORMATION */
+  /* PAGES INFORMATION */
 
   .pages-information {
     display: grid;
